# abc

./: .env  .gitignore  README.md  pyproject.toml
src/abc/data/download/: download_iri_ecmwf.py
src/abc/utils/: data_util.py  experiments_util.py  general_util.py
src/abc_s2s/data/download/: download_iri_ecmwf.py
src/abc_s2s/utils/: data_util.py  general_util.py
src/sw_data/data/: __init__.py  ecmwf.py  era5.py  test.py  utils.py
src/sw_data/download/: download_iri_ecmwf.py
src/sw_data/process/: pandify_iri_ecmwf.py
src/sw_data/utils/: data_util.py  experiments_util.py
src/sw_models/perpp_ecmwf/: attributes.py  perpp_ecmwf.py
