[project]
name = "abc-s2s"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Genevieve Flaspohler", email = "geflaspohler@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "xarray>=2024.6.0",
    "netcdf4>=1.7.1.post1",
    "h5netcdf>=1.3.0",
    "filelock>=3.15.4",
    "python-dotenv>=1.0.1",
    "google-cloud-storage>=2.18.0",
    "gcsfs>=2024.6.1",
    "h5py>=3.11.0",
    "scipy>=1.14.0",
    "pydap>=3.4.1",
    "zarr>=2.18.2",
    "fsspec>=2024.6.1",
    "cftime>=1.6.4",
    "rasterio>=1.3.10",
    "cfgrib>=0.9.14.0",
    "pooch>=1.8.2",
    "tables>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"
env_files = [".env"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sw_models", "src/sw_data", "src/sw_eval"]
