[project]
name = "subseasonal-world"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Genevieve Flaspohler", email = "geflaspohler@gmail.com" }
]
dependencies = [
    "dask==2024.7.0",
    "dask[complete]",
    "coiled",
    "numpy==1.26",
    "httplib2",
    "s3fs",
    "google-api-python-client",
    "proto-plus==1.24.0.dev1",
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "cryptography",
    "ipykernel",
    "jupyterlab",
    "xarray",
    "matplotlib",
    "geopandas",
    "rioxarray",
    "notebook",
    "jupytext",
    "dask-kubernetes>=2024.5.0",
    "gcsfs",
    "zarr",
    "h5py",
    "netcdf4",
    "h5netcdf",
    "scipy",
    "requests",
    "ecmwf-api-client",
    "cdsapi>=0.7.0",
    "ttictoc>=0.5.6",
    "tables>=3.9.2",
    "scikit-learn>=1.5.1",
    "dateparser>=1.2.0",
    "sheerwater-benchmarking @ git+https://github.com/rhiza-research/sheerwater-benchmarking.git@geflaspo/null-cache",
]
readme = "README.md"
requires-python = ">= 3.8"
env_files = [".env"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sw_models", "src/sw_data", "src/sw_eval"]
